index.html customised

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<!-- meta character set -->
 	<meta charset="UTF-8">
 	<!-- Site Title -->
-	<title>Agency</title>
+	<title>terrascope.io</title>
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,500,600" rel="stylesheet">
 		<!--
@@ -74,8 +74,8 @@
 				<div class="row fullscreen justify-content-center align-items-center">
 					<div class="col-lg-8">
 						<div class="banner-content text-center">
-							<p class="text-uppercase text-white">We work hard, we result perfect</p>
-							<h1 class="text-uppercase text-white">Crafting Digital Agency Experiences</h1>
+							<p class="text-uppercase text-white">Coming soon</p>
+							<h1 class="text-uppercase text-white">Exploring the Earth thorugh data</h1>
 							<a href="#" class="primary-btn banner-btn">Explore Us</a>
 						</div>
 					</div>
